luqum/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    SEPARATOR

Grammar

Rule 0     S' -> expression
Rule 1     expression -> expression OR_OP expression
Rule 2     expression -> expression AND_OP expression
Rule 3     expression -> expression expression
Rule 4     unary_expression -> PLUS unary_expression
Rule 5     unary_expression -> MINUS unary_expression
Rule 6     expression -> unary_expression
Rule 7     unary_expression -> LPAREN expression RPAREN
Rule 8     unary_expression -> LBRACKET phrase_or_term TO phrase_or_term RBRACKET
Rule 9     unary_expression -> TERM COLUMN unary_expression
Rule 10    unary_expression -> PHRASE
Rule 11    unary_expression -> PHRASE APPROX
Rule 12    expression -> expression BOOST
Rule 13    unary_expression -> TERM
Rule 14    unary_expression -> TERM APPROX
Rule 15    unary_expression -> TO
Rule 16    phrase_or_term -> TERM
Rule 17    phrase_or_term -> PHRASE

Terminals, with rules where they appear

AND_OP               : 2
APPROX               : 11 14
BOOST                : 12
COLUMN               : 9
LBRACKET             : 8
LPAREN               : 7
MINUS                : 5
OR_OP                : 1
PHRASE               : 10 11 17
PLUS                 : 4
RBRACKET             : 8
RPAREN               : 7
SEPARATOR            : 
TERM                 : 9 13 14 16
TO                   : 8 15
error                : 

Nonterminals, with rules where they appear

expression           : 1 1 2 2 3 3 7 12 0
phrase_or_term       : 8 8
unary_expression     : 4 5 6 9

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . expression OR_OP expression
    (2) expression -> . expression AND_OP expression
    (3) expression -> . expression expression
    (6) expression -> . unary_expression
    (12) expression -> . expression BOOST
    (4) unary_expression -> . PLUS unary_expression
    (5) unary_expression -> . MINUS unary_expression
    (7) unary_expression -> . LPAREN expression RPAREN
    (8) unary_expression -> . LBRACKET phrase_or_term TO phrase_or_term RBRACKET
    (9) unary_expression -> . TERM COLUMN unary_expression
    (10) unary_expression -> . PHRASE
    (11) unary_expression -> . PHRASE APPROX
    (13) unary_expression -> . TERM
    (14) unary_expression -> . TERM APPROX
    (15) unary_expression -> . TO

    PLUS            shift and go to state 9
    MINUS           shift and go to state 1
    LPAREN          shift and go to state 5
    LBRACKET        shift and go to state 3
    TERM            shift and go to state 2
    PHRASE          shift and go to state 4
    TO              shift and go to state 8

    expression                     shift and go to state 7
    unary_expression               shift and go to state 6

state 1

    (5) unary_expression -> MINUS . unary_expression
    (4) unary_expression -> . PLUS unary_expression
    (5) unary_expression -> . MINUS unary_expression
    (7) unary_expression -> . LPAREN expression RPAREN
    (8) unary_expression -> . LBRACKET phrase_or_term TO phrase_or_term RBRACKET
    (9) unary_expression -> . TERM COLUMN unary_expression
    (10) unary_expression -> . PHRASE
    (11) unary_expression -> . PHRASE APPROX
    (13) unary_expression -> . TERM
    (14) unary_expression -> . TERM APPROX
    (15) unary_expression -> . TO

    PLUS            shift and go to state 9
    MINUS           shift and go to state 1
    LPAREN          shift and go to state 5
    LBRACKET        shift and go to state 3
    TERM            shift and go to state 2
    PHRASE          shift and go to state 4
    TO              shift and go to state 8

    unary_expression               shift and go to state 10

state 2

    (9) unary_expression -> TERM . COLUMN unary_expression
    (13) unary_expression -> TERM .
    (14) unary_expression -> TERM . APPROX

    COLUMN          shift and go to state 11
    OR_OP           reduce using rule 13 (unary_expression -> TERM .)
    AND_OP          reduce using rule 13 (unary_expression -> TERM .)
    BOOST           reduce using rule 13 (unary_expression -> TERM .)
    PLUS            reduce using rule 13 (unary_expression -> TERM .)
    MINUS           reduce using rule 13 (unary_expression -> TERM .)
    LPAREN          reduce using rule 13 (unary_expression -> TERM .)
    LBRACKET        reduce using rule 13 (unary_expression -> TERM .)
    TERM            reduce using rule 13 (unary_expression -> TERM .)
    PHRASE          reduce using rule 13 (unary_expression -> TERM .)
    TO              reduce using rule 13 (unary_expression -> TERM .)
    $end            reduce using rule 13 (unary_expression -> TERM .)
    RPAREN          reduce using rule 13 (unary_expression -> TERM .)
    APPROX          shift and go to state 12


state 3

    (8) unary_expression -> LBRACKET . phrase_or_term TO phrase_or_term RBRACKET
    (16) phrase_or_term -> . TERM
    (17) phrase_or_term -> . PHRASE

    TERM            shift and go to state 13
    PHRASE          shift and go to state 14

    phrase_or_term                 shift and go to state 15

state 4

    (10) unary_expression -> PHRASE .
    (11) unary_expression -> PHRASE . APPROX

    OR_OP           reduce using rule 10 (unary_expression -> PHRASE .)
    AND_OP          reduce using rule 10 (unary_expression -> PHRASE .)
    BOOST           reduce using rule 10 (unary_expression -> PHRASE .)
    PLUS            reduce using rule 10 (unary_expression -> PHRASE .)
    MINUS           reduce using rule 10 (unary_expression -> PHRASE .)
    LPAREN          reduce using rule 10 (unary_expression -> PHRASE .)
    LBRACKET        reduce using rule 10 (unary_expression -> PHRASE .)
    TERM            reduce using rule 10 (unary_expression -> PHRASE .)
    PHRASE          reduce using rule 10 (unary_expression -> PHRASE .)
    TO              reduce using rule 10 (unary_expression -> PHRASE .)
    $end            reduce using rule 10 (unary_expression -> PHRASE .)
    RPAREN          reduce using rule 10 (unary_expression -> PHRASE .)
    APPROX          shift and go to state 16


state 5

    (7) unary_expression -> LPAREN . expression RPAREN
    (1) expression -> . expression OR_OP expression
    (2) expression -> . expression AND_OP expression
    (3) expression -> . expression expression
    (6) expression -> . unary_expression
    (12) expression -> . expression BOOST
    (4) unary_expression -> . PLUS unary_expression
    (5) unary_expression -> . MINUS unary_expression
    (7) unary_expression -> . LPAREN expression RPAREN
    (8) unary_expression -> . LBRACKET phrase_or_term TO phrase_or_term RBRACKET
    (9) unary_expression -> . TERM COLUMN unary_expression
    (10) unary_expression -> . PHRASE
    (11) unary_expression -> . PHRASE APPROX
    (13) unary_expression -> . TERM
    (14) unary_expression -> . TERM APPROX
    (15) unary_expression -> . TO

    PLUS            shift and go to state 9
    MINUS           shift and go to state 1
    LPAREN          shift and go to state 5
    LBRACKET        shift and go to state 3
    TERM            shift and go to state 2
    PHRASE          shift and go to state 4
    TO              shift and go to state 8

    expression                     shift and go to state 17
    unary_expression               shift and go to state 6

state 6

    (6) expression -> unary_expression .

    RPAREN          reduce using rule 6 (expression -> unary_expression .)
    OR_OP           reduce using rule 6 (expression -> unary_expression .)
    AND_OP          reduce using rule 6 (expression -> unary_expression .)
    BOOST           reduce using rule 6 (expression -> unary_expression .)
    PLUS            reduce using rule 6 (expression -> unary_expression .)
    MINUS           reduce using rule 6 (expression -> unary_expression .)
    LPAREN          reduce using rule 6 (expression -> unary_expression .)
    LBRACKET        reduce using rule 6 (expression -> unary_expression .)
    TERM            reduce using rule 6 (expression -> unary_expression .)
    PHRASE          reduce using rule 6 (expression -> unary_expression .)
    TO              reduce using rule 6 (expression -> unary_expression .)
    $end            reduce using rule 6 (expression -> unary_expression .)


state 7

    (0) S' -> expression .
    (1) expression -> expression . OR_OP expression
    (2) expression -> expression . AND_OP expression
    (3) expression -> expression . expression
    (12) expression -> expression . BOOST
    (1) expression -> . expression OR_OP expression
    (2) expression -> . expression AND_OP expression
    (3) expression -> . expression expression
    (6) expression -> . unary_expression
    (12) expression -> . expression BOOST
    (4) unary_expression -> . PLUS unary_expression
    (5) unary_expression -> . MINUS unary_expression
    (7) unary_expression -> . LPAREN expression RPAREN
    (8) unary_expression -> . LBRACKET phrase_or_term TO phrase_or_term RBRACKET
    (9) unary_expression -> . TERM COLUMN unary_expression
    (10) unary_expression -> . PHRASE
    (11) unary_expression -> . PHRASE APPROX
    (13) unary_expression -> . TERM
    (14) unary_expression -> . TERM APPROX
    (15) unary_expression -> . TO

    OR_OP           shift and go to state 21
    AND_OP          shift and go to state 18
    BOOST           shift and go to state 19
    PLUS            shift and go to state 9
    MINUS           shift and go to state 1
    LPAREN          shift and go to state 5
    LBRACKET        shift and go to state 3
    TERM            shift and go to state 2
    PHRASE          shift and go to state 4
    TO              shift and go to state 8

    expression                     shift and go to state 20
    unary_expression               shift and go to state 6

state 8

    (15) unary_expression -> TO .

    OR_OP           reduce using rule 15 (unary_expression -> TO .)
    AND_OP          reduce using rule 15 (unary_expression -> TO .)
    BOOST           reduce using rule 15 (unary_expression -> TO .)
    PLUS            reduce using rule 15 (unary_expression -> TO .)
    MINUS           reduce using rule 15 (unary_expression -> TO .)
    LPAREN          reduce using rule 15 (unary_expression -> TO .)
    LBRACKET        reduce using rule 15 (unary_expression -> TO .)
    TERM            reduce using rule 15 (unary_expression -> TO .)
    PHRASE          reduce using rule 15 (unary_expression -> TO .)
    TO              reduce using rule 15 (unary_expression -> TO .)
    $end            reduce using rule 15 (unary_expression -> TO .)
    RPAREN          reduce using rule 15 (unary_expression -> TO .)


state 9

    (4) unary_expression -> PLUS . unary_expression
    (4) unary_expression -> . PLUS unary_expression
    (5) unary_expression -> . MINUS unary_expression
    (7) unary_expression -> . LPAREN expression RPAREN
    (8) unary_expression -> . LBRACKET phrase_or_term TO phrase_or_term RBRACKET
    (9) unary_expression -> . TERM COLUMN unary_expression
    (10) unary_expression -> . PHRASE
    (11) unary_expression -> . PHRASE APPROX
    (13) unary_expression -> . TERM
    (14) unary_expression -> . TERM APPROX
    (15) unary_expression -> . TO

    PLUS            shift and go to state 9
    MINUS           shift and go to state 1
    LPAREN          shift and go to state 5
    LBRACKET        shift and go to state 3
    TERM            shift and go to state 2
    PHRASE          shift and go to state 4
    TO              shift and go to state 8

    unary_expression               shift and go to state 22

state 10

    (5) unary_expression -> MINUS unary_expression .

    OR_OP           reduce using rule 5 (unary_expression -> MINUS unary_expression .)
    AND_OP          reduce using rule 5 (unary_expression -> MINUS unary_expression .)
    BOOST           reduce using rule 5 (unary_expression -> MINUS unary_expression .)
    PLUS            reduce using rule 5 (unary_expression -> MINUS unary_expression .)
    MINUS           reduce using rule 5 (unary_expression -> MINUS unary_expression .)
    LPAREN          reduce using rule 5 (unary_expression -> MINUS unary_expression .)
    LBRACKET        reduce using rule 5 (unary_expression -> MINUS unary_expression .)
    TERM            reduce using rule 5 (unary_expression -> MINUS unary_expression .)
    PHRASE          reduce using rule 5 (unary_expression -> MINUS unary_expression .)
    TO              reduce using rule 5 (unary_expression -> MINUS unary_expression .)
    $end            reduce using rule 5 (unary_expression -> MINUS unary_expression .)
    RPAREN          reduce using rule 5 (unary_expression -> MINUS unary_expression .)


state 11

    (9) unary_expression -> TERM COLUMN . unary_expression
    (4) unary_expression -> . PLUS unary_expression
    (5) unary_expression -> . MINUS unary_expression
    (7) unary_expression -> . LPAREN expression RPAREN
    (8) unary_expression -> . LBRACKET phrase_or_term TO phrase_or_term RBRACKET
    (9) unary_expression -> . TERM COLUMN unary_expression
    (10) unary_expression -> . PHRASE
    (11) unary_expression -> . PHRASE APPROX
    (13) unary_expression -> . TERM
    (14) unary_expression -> . TERM APPROX
    (15) unary_expression -> . TO

    PLUS            shift and go to state 9
    MINUS           shift and go to state 1
    LPAREN          shift and go to state 5
    LBRACKET        shift and go to state 3
    TERM            shift and go to state 2
    PHRASE          shift and go to state 4
    TO              shift and go to state 8

    unary_expression               shift and go to state 23

state 12

    (14) unary_expression -> TERM APPROX .

    OR_OP           reduce using rule 14 (unary_expression -> TERM APPROX .)
    AND_OP          reduce using rule 14 (unary_expression -> TERM APPROX .)
    BOOST           reduce using rule 14 (unary_expression -> TERM APPROX .)
    PLUS            reduce using rule 14 (unary_expression -> TERM APPROX .)
    MINUS           reduce using rule 14 (unary_expression -> TERM APPROX .)
    LPAREN          reduce using rule 14 (unary_expression -> TERM APPROX .)
    LBRACKET        reduce using rule 14 (unary_expression -> TERM APPROX .)
    TERM            reduce using rule 14 (unary_expression -> TERM APPROX .)
    PHRASE          reduce using rule 14 (unary_expression -> TERM APPROX .)
    TO              reduce using rule 14 (unary_expression -> TERM APPROX .)
    $end            reduce using rule 14 (unary_expression -> TERM APPROX .)
    RPAREN          reduce using rule 14 (unary_expression -> TERM APPROX .)


state 13

    (16) phrase_or_term -> TERM .

    RBRACKET        reduce using rule 16 (phrase_or_term -> TERM .)
    TO              reduce using rule 16 (phrase_or_term -> TERM .)


state 14

    (17) phrase_or_term -> PHRASE .

    RBRACKET        reduce using rule 17 (phrase_or_term -> PHRASE .)
    TO              reduce using rule 17 (phrase_or_term -> PHRASE .)


state 15

    (8) unary_expression -> LBRACKET phrase_or_term . TO phrase_or_term RBRACKET

    TO              shift and go to state 24


state 16

    (11) unary_expression -> PHRASE APPROX .

    OR_OP           reduce using rule 11 (unary_expression -> PHRASE APPROX .)
    AND_OP          reduce using rule 11 (unary_expression -> PHRASE APPROX .)
    BOOST           reduce using rule 11 (unary_expression -> PHRASE APPROX .)
    PLUS            reduce using rule 11 (unary_expression -> PHRASE APPROX .)
    MINUS           reduce using rule 11 (unary_expression -> PHRASE APPROX .)
    LPAREN          reduce using rule 11 (unary_expression -> PHRASE APPROX .)
    LBRACKET        reduce using rule 11 (unary_expression -> PHRASE APPROX .)
    TERM            reduce using rule 11 (unary_expression -> PHRASE APPROX .)
    PHRASE          reduce using rule 11 (unary_expression -> PHRASE APPROX .)
    TO              reduce using rule 11 (unary_expression -> PHRASE APPROX .)
    $end            reduce using rule 11 (unary_expression -> PHRASE APPROX .)
    RPAREN          reduce using rule 11 (unary_expression -> PHRASE APPROX .)


state 17

    (7) unary_expression -> LPAREN expression . RPAREN
    (1) expression -> expression . OR_OP expression
    (2) expression -> expression . AND_OP expression
    (3) expression -> expression . expression
    (12) expression -> expression . BOOST
    (1) expression -> . expression OR_OP expression
    (2) expression -> . expression AND_OP expression
    (3) expression -> . expression expression
    (6) expression -> . unary_expression
    (12) expression -> . expression BOOST
    (4) unary_expression -> . PLUS unary_expression
    (5) unary_expression -> . MINUS unary_expression
    (7) unary_expression -> . LPAREN expression RPAREN
    (8) unary_expression -> . LBRACKET phrase_or_term TO phrase_or_term RBRACKET
    (9) unary_expression -> . TERM COLUMN unary_expression
    (10) unary_expression -> . PHRASE
    (11) unary_expression -> . PHRASE APPROX
    (13) unary_expression -> . TERM
    (14) unary_expression -> . TERM APPROX
    (15) unary_expression -> . TO

    RPAREN          shift and go to state 25
    OR_OP           shift and go to state 21
    AND_OP          shift and go to state 18
    BOOST           shift and go to state 19
    PLUS            shift and go to state 9
    MINUS           shift and go to state 1
    LPAREN          shift and go to state 5
    LBRACKET        shift and go to state 3
    TERM            shift and go to state 2
    PHRASE          shift and go to state 4
    TO              shift and go to state 8

    expression                     shift and go to state 20
    unary_expression               shift and go to state 6

state 18

    (2) expression -> expression AND_OP . expression
    (1) expression -> . expression OR_OP expression
    (2) expression -> . expression AND_OP expression
    (3) expression -> . expression expression
    (6) expression -> . unary_expression
    (12) expression -> . expression BOOST
    (4) unary_expression -> . PLUS unary_expression
    (5) unary_expression -> . MINUS unary_expression
    (7) unary_expression -> . LPAREN expression RPAREN
    (8) unary_expression -> . LBRACKET phrase_or_term TO phrase_or_term RBRACKET
    (9) unary_expression -> . TERM COLUMN unary_expression
    (10) unary_expression -> . PHRASE
    (11) unary_expression -> . PHRASE APPROX
    (13) unary_expression -> . TERM
    (14) unary_expression -> . TERM APPROX
    (15) unary_expression -> . TO

    PLUS            shift and go to state 9
    MINUS           shift and go to state 1
    LPAREN          shift and go to state 5
    LBRACKET        shift and go to state 3
    TERM            shift and go to state 2
    PHRASE          shift and go to state 4
    TO              shift and go to state 8

    expression                     shift and go to state 26
    unary_expression               shift and go to state 6

state 19

    (12) expression -> expression BOOST .

    RPAREN          reduce using rule 12 (expression -> expression BOOST .)
    OR_OP           reduce using rule 12 (expression -> expression BOOST .)
    AND_OP          reduce using rule 12 (expression -> expression BOOST .)
    BOOST           reduce using rule 12 (expression -> expression BOOST .)
    PLUS            reduce using rule 12 (expression -> expression BOOST .)
    MINUS           reduce using rule 12 (expression -> expression BOOST .)
    LPAREN          reduce using rule 12 (expression -> expression BOOST .)
    LBRACKET        reduce using rule 12 (expression -> expression BOOST .)
    TERM            reduce using rule 12 (expression -> expression BOOST .)
    PHRASE          reduce using rule 12 (expression -> expression BOOST .)
    TO              reduce using rule 12 (expression -> expression BOOST .)
    $end            reduce using rule 12 (expression -> expression BOOST .)


state 20

    (3) expression -> expression expression .
    (1) expression -> expression . OR_OP expression
    (2) expression -> expression . AND_OP expression
    (3) expression -> expression . expression
    (12) expression -> expression . BOOST
    (1) expression -> . expression OR_OP expression
    (2) expression -> . expression AND_OP expression
    (3) expression -> . expression expression
    (6) expression -> . unary_expression
    (12) expression -> . expression BOOST
    (4) unary_expression -> . PLUS unary_expression
    (5) unary_expression -> . MINUS unary_expression
    (7) unary_expression -> . LPAREN expression RPAREN
    (8) unary_expression -> . LBRACKET phrase_or_term TO phrase_or_term RBRACKET
    (9) unary_expression -> . TERM COLUMN unary_expression
    (10) unary_expression -> . PHRASE
    (11) unary_expression -> . PHRASE APPROX
    (13) unary_expression -> . TERM
    (14) unary_expression -> . TERM APPROX
    (15) unary_expression -> . TO

  ! shift/reduce conflict for OR_OP resolved as shift
  ! shift/reduce conflict for AND_OP resolved as shift
  ! shift/reduce conflict for BOOST resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for LBRACKET resolved as shift
  ! shift/reduce conflict for TERM resolved as shift
  ! shift/reduce conflict for PHRASE resolved as shift
  ! shift/reduce conflict for TO resolved as shift
    RPAREN          reduce using rule 3 (expression -> expression expression .)
    $end            reduce using rule 3 (expression -> expression expression .)
    OR_OP           shift and go to state 21
    AND_OP          shift and go to state 18
    BOOST           shift and go to state 19
    PLUS            shift and go to state 9
    MINUS           shift and go to state 1
    LPAREN          shift and go to state 5
    LBRACKET        shift and go to state 3
    TERM            shift and go to state 2
    PHRASE          shift and go to state 4
    TO              shift and go to state 8

  ! OR_OP           [ reduce using rule 3 (expression -> expression expression .) ]
  ! AND_OP          [ reduce using rule 3 (expression -> expression expression .) ]
  ! BOOST           [ reduce using rule 3 (expression -> expression expression .) ]
  ! PLUS            [ reduce using rule 3 (expression -> expression expression .) ]
  ! MINUS           [ reduce using rule 3 (expression -> expression expression .) ]
  ! LPAREN          [ reduce using rule 3 (expression -> expression expression .) ]
  ! LBRACKET        [ reduce using rule 3 (expression -> expression expression .) ]
  ! TERM            [ reduce using rule 3 (expression -> expression expression .) ]
  ! PHRASE          [ reduce using rule 3 (expression -> expression expression .) ]
  ! TO              [ reduce using rule 3 (expression -> expression expression .) ]

    expression                     shift and go to state 20
    unary_expression               shift and go to state 6

state 21

    (1) expression -> expression OR_OP . expression
    (1) expression -> . expression OR_OP expression
    (2) expression -> . expression AND_OP expression
    (3) expression -> . expression expression
    (6) expression -> . unary_expression
    (12) expression -> . expression BOOST
    (4) unary_expression -> . PLUS unary_expression
    (5) unary_expression -> . MINUS unary_expression
    (7) unary_expression -> . LPAREN expression RPAREN
    (8) unary_expression -> . LBRACKET phrase_or_term TO phrase_or_term RBRACKET
    (9) unary_expression -> . TERM COLUMN unary_expression
    (10) unary_expression -> . PHRASE
    (11) unary_expression -> . PHRASE APPROX
    (13) unary_expression -> . TERM
    (14) unary_expression -> . TERM APPROX
    (15) unary_expression -> . TO

    PLUS            shift and go to state 9
    MINUS           shift and go to state 1
    LPAREN          shift and go to state 5
    LBRACKET        shift and go to state 3
    TERM            shift and go to state 2
    PHRASE          shift and go to state 4
    TO              shift and go to state 8

    expression                     shift and go to state 27
    unary_expression               shift and go to state 6

state 22

    (4) unary_expression -> PLUS unary_expression .
